# rust-sctp

./: .project  .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
.github/workflows/: test.yaml
examples/: listener.rs  one_to_many.rs  stream.rs
sctp/: enum.SoDirection.html  index.html  sidebar-items.js  struct.Incoming.html  struct.SctpDatagram.html  struct.SctpEndpoint.html  struct.SctpListener.html  struct.SctpStream.html
sctp/sctpsock/: sidebar-items.js
sctp_sys/: index.html  sidebar-items.js
sctp_sys/common/: constant.IPPROTO_SCTP.html  constant.SCTP_ABORT.html  constant.SCTP_ADDR_OVER.html  constant.SCTP_BINDX_ADD_ADDR.html  constant.SCTP_BINDX_REM_ADDR.html  constant.SCTP_EOF.html  constant.SCTP_PR_SCTP_BUF.html  constant.SCTP_PR_SCTP_RTX.html  constant.SCTP_PR_SCTP_TTL.html  constant.SCTP_SENDALL.html  constant.SCTP_UNORDERED.html  constant.SOCK_SEQPACKET.html  constant.SOL_SCTP.html  index.html  sidebar-items.js  struct.sctp_sndrcvinfo.html  type.sctp_assoc_t.html
sctp_sys/linux/: fn.sctp_bindx.html  fn.sctp_connectx.html  fn.sctp_freeladdrs.html  fn.sctp_freepaddrs.html  fn.sctp_getaddrlen.html  fn.sctp_getassocid.html  fn.sctp_getladdrs.html  fn.sctp_getpaddrs.html  fn.sctp_opt_info.html  fn.sctp_peeloff.html  fn.sctp_recvmsg.html  fn.sctp_send.html  fn.sctp_sendmsg.html  index.html  sidebar-items.js
src/: lib.rs  main.rs  mio_unix.rs  sctpsock.rs
src/libc/: dox.rs.html  lib.rs.html  macros.rs.html
src/sctp/: lib.rs.html  sctpsock.rs.html
src/sctp_sys/: common.rs.html  lib.rs.html  linux.rs.html
(+71 files in other folders)
